--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "Laravel package to manage periods of time",
     "type": "library",
     "require": {
-        "laravel/framework": "^5.3"
+        "laravel/framework": "^5.3",
+        "fzaninotto/faker": "^1.6"
     },
     "license": "MIT",
     "authors": [
